# f1twtr_gpt_chatbot

./: .gitignore  README.md  accounts_to_scrape.json  chatbot.py  create_database.py  pyproject.toml
data/: adamcooperf1.csv  alex_albon.csv  alfaromeoorlen.csv  alphataurif1.csv  alpinef1team.csv  andrewbensonf1.csv  antdavidson.csv  astonmartinf1.csv  aussiegrit.csv  c4f1.csv  carlossainz55.csv  charles_leclerc.csv  chrismedlandf1.csv  croftyf1.csv  danielricciardo.csv  eddstrawf1.csv  espnf1.csv  f1.csv  f1_experiences.csv  garyandersonf1.csv  georgerussell63.csv  guanyuzhou24.csv  haasf1team.csv  hillf1.csv  hondaracingf1.csv  hulkhulkenberg.csv  jenniegow.csv  jensonbutton.csv  jrobertsf1.csv  lance_stroll.csv  landonorris.csv  lawrobarretto.csv  lewishamilton.csv  max33verstappen.csv  mbrundlef1.csv  mclarenf1.csv  mercedesamgf1.csv  nicholaslatifi.csv  nicorosberg.csv  nikita_mazepin.csv  (+15 more)
