[tool.poetry]
name = "twtbot-gpt3"
version = "0.1.0"
description = ""
authors = ["Arnav Jindal <arnav.jindal7@gmail.com>"]
readme = "README.md"
packages = [{include = "twtbot_gpt3"}]

[tool.poetry.dependencies]
python = "^3.11"
langchain = "^0.0.198"
openai = "^0.27.8"
chromadb = "^0.3.26"
tiktoken = "^0.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
